src/_sass/components/_components.services.scss
.services {
  .list {
    display: flex;
    flex-wrap: wrap;

    @media screen and (min-width: $bp-desktop) {
      flex-wrap: nowrap;
    }
  }
}

.service {
  text-align: center;
  margin-bottom: $gutter--large;
  position: relative;
  padding-bottom: 60px; // button offset
  border-radius: 5px;
  overflow: hidden;

  @include box-shadow;

  @media screen and (min-width: $bp-desktop) {
    margin-left: 15px;
    margin-right: 15px;
    flex-basis: 25%;

    &:first-of-type {
      margin-left: 0;
    }

    &:last-of-type {
      margin-right: 0;
    }
  }

  h2 {
    margin: $gutter--medium;
    font-weight: 600;

    @include display;
    @include h3;

    @media screen and (min-width: $bp-desktop) {
      margin: $gutter--large;
    }

    @media screen and (min-width: $bp-large) {
      margin: 60px 40px 30px;
    }
  }

  p {
    margin: $gutter--medium;

    @include body-large;

    @media screen and (min-width: $bp-desktop) {
      margin: $gutter--large;
    }

    @media screen and (min-width: $bp-large) {
      margin: 30px 40px 60px;
    }
  }

  a {
    position: absolute;
    bottom: 0;
  }
}

